footer by demo1

--- a/index.html
+++ b/index.html
@@ -307,6 +307,13 @@
       </div>
     </div>
   </section>
+
+
+  <!-- Footer -->
+
+  <footer> Đây là foooter của demo1
+
+  </footer>
   <!-- end project -->
 
   <!-- Optional JavaScript -->
