footer by demo2 haha

--- a/index.html
+++ b/index.html
@@ -307,6 +307,11 @@
       </div>
     </div>
   </section>
+
+
+  <!-- Footer -->
+
+  <footer>Đây là foooter của demo2 haha</footer>
   <!-- end project -->
 
   <!-- Optional JavaScript -->
